Add '26.3-snapshot-10' sources